--- a/index.html
+++ b/index.html
@@ -1,20 +1,7 @@
 <html>
 <head>
-	<meta property="og:title" content="Meta_og_Title">
-	<meta property="og:description" content="Meta_og_Description">
-	<meta property="og:image" content="https://poptestimage.sloppy.zone/Image.png">
-	<meta property="og:url" content="/">
-	<meta property="og:site_name" content="Meta_og_SiteName">
-	
-	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="Meta_twitter_site">
-	<meta name="twitter:title" content="Meta_twitter_title">
-	<meta name="twitter:description" content="Meta_twitter_description">
-	<meta name="twitter:image" content="https://poptestimage.sloppy.zone/Image.png">
-	<meta name="twitter:image:alt" content="Hero_alt_text">
-
 </head>
 <body>
-<img src='/Image.png'/>
+<a href=http://panopo.ly>Panopoly</a> CMS.
 </body>
 </html>
